--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 BAC[[:space:]]Classification/params_2023_11_02__22_41_05.mat filter=lfs diff=lfs merge=lfs -text
+BAC[[:space:]]Classification/params_2023_11_02__22_41_05.mat filter=lfs diff=lfs merge=lfs -text
